--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: scala-steward-org/scala-steward-action@v2
       with:
         github-token: ${{ secrets.TOKEN }}
-        author-email: bla@gmail.com
-        author-name: bot
+        author-email: matankdr@gmail.com
+        author-name: matankdr
