--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,17 +6,17 @@ enable:
   prs: true
 # comments object allows you to specify a different message for issues and prs
 
-comments:
-  issues: |
-    Thanks for opening this issue!
-    I have applied any labels matching special text in your title and description.
+# comments:
+#   issues: |
+#     Thanks for opening this issue!
+#     I have applied any labels matching special text in your title and description.
 
-    Please review the labels and make any necessary changes.
-  prs: |
-    Thanks for the contribution!
-    I have applied any labels matching special text in your title and description.
+#     Please review the labels and make any necessary changes.
+#   prs: |
+#     Thanks for the contribution!
+#     I have applied any labels matching special text in your title and description.
 
-    Please review the labels and make any necessary changes.
+#     Please review the labels and make any necessary changes.
 
 # Labels is an object where:
 # - keys are labels
