--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto Merge
+name: Auto Merge after Steward
 on:
   workflow_run:
     workflows:
@@ -22,4 +22,4 @@ jobs:
           merge-method: rebase
           required-labels: scala-steward
           pull-request: ${{ github.event.inputs.pull-request }}
-          dry-run: true
+          dry-run: false
