--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,18 +1,18 @@
-name: Labels
-on: 
-  issues:
-    types: [opened, edited, milestoned]
-  pull_request_target:
-    types: [opened, edited, milestoned]
-
-jobs:
-
-  labeler:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Check Labels
-      id: labeler
-      uses: jimschubert/labeler-action@v2
-      with:
-        GITHUB_TOKEN: ${{secrets.TOKEN}}
+# name: Labels
+# on: 
+#   issues:
+#     types: [opened, edited, milestoned]
+#   pull_request_target:
+#     types: [opened, edited, milestoned]
+#
+# jobs:
+#
+#   labeler:
+#     runs-on: ubuntu-latest
+#
+#     steps:
+#     - name: Check Labels
+#       id: labeler
+#       uses: jimschubert/labeler-action@v2
+#       with:
+#         GITHUB_TOKEN: ${{secrets.TOKEN}}
