--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           merge-method: rebase
-          required-labels: scala-steward
+#           required-labels: scala-steward
           pull-request: ${{ github.event.inputs.pull-request }}
           dry-run: false
