--- a/.github/workflows/pr-merge-bot.yml
+++ b/.github/workflows/pr-merge-bot.yml
@@ -9,10 +9,10 @@ on:
       - review_requested
       - synchronize
       - unlabeled
-  pull_request_review:
-    types:
-      - dismissed
-      - submitted
+#   pull_request_review:
+#     types:
+#       - dismissed
+#       - submitted
       
   workflow_dispatch:
 
