--- a/.github/workflows/pr-merge-bot.yml
+++ b/.github/workflows/pr-merge-bot.yml
@@ -2,13 +2,13 @@ name: Merge Bot
 
 on:
   pull_request:
-    types:
-      - labeled
-      - ready_for_review
-      - review_request_removed
-      - review_requested
-      - synchronize
-      - unlabeled
+#     types:
+#       - labeled
+#       - ready_for_review
+#       - review_request_removed
+#       - review_requested
+#       - synchronize
+#       - unlabeled
 #   pull_request_review:
 #     types:
 #       - dismissed
