--- a/.github/workflows/pr-merge-bot.yml
+++ b/.github/workflows/pr-merge-bot.yml
@@ -27,8 +27,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
         test: false
         reviewers: false
-        labels: ready, merge
+        labels: ready
         blocking_labels: do-not-merge
         checks_enabled: true
-        method: squash
+        method: merge
         delete_source_branch: true
