--- a/.github/workflows/pr-merge-bot.yml
+++ b/.github/workflows/pr-merge-bot.yml
@@ -4,15 +4,15 @@ on:
   pull_request:
     types:
       - labeled
-#       - ready_for_review
-#       - review_request_removed
-#       - review_requested
+      - ready_for_review
+      - review_request_removed
+      - review_requested
       - synchronize
       - unlabeled
-#   pull_request_review:
-#     types:
-#       - dismissed
-#       - submitted
+  pull_request_review:
+    types:
+      - dismissed
+      - submitted
       
   workflow_dispatch:
 
